# Citylogix-AI-inference

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
config/: default.yaml
src/citylogix_ai_inference/: __init__.py  cli.py  config.py  predictor.py
src/citylogix_ai_inference/adapters/: base.py  pytorch.py  registry.py
src/citylogix_ai_inference/exporters/: __init__.py  coco.py  cvat.py
src/citylogix_ai_inference/models/: __init__.py  base.py  onnx.py  pytorch.py  registry.py
src/citylogix_ai_inference/processors/: __init__.py  folder_scanner.py  image_loader.py  sliding_window.py
